Change collection content list selection color to white. Added view controller class for action buttons. Refactored Plan View Controller’s use, and added Add Collection button to Collection View Controller. Changed GLAViewController’s -copyLayoutConstraints: to have a constraintVisitor block passed, to allow easy swapping to new constraints and updating their identifier. Also used by -wrapChildViewKeepingOutsideConstraints: GLAProjectManager: Added loading and saving of a Project’s Collection List.

--- a/Blik Mac/GLAFileCollectionViewController.xib
+++ b/Blik Mac/GLAFileCollectionViewController.xib
@@ -87,6 +87,10 @@
                                                                     <outlet property="textField" destination="0Gy-1C-EIV" id="ua0-Bj-RpT"/>
                                                                 </connections>
                                                             </tableCellView>
+                                                            <customView identifier="NSTableViewRowViewKey" id="cgB-L8-6nI" customClass="GLATableContentRowView">
+                                                                <rect key="frame" x="1" y="30" width="168" height="39"/>
+                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                            </customView>
                                                         </prototypeCellViews>
                                                     </tableColumn>
                                                 </tableColumns>
