--- a/Blik Mac/GLAMainNavigationBarController.xib
+++ b/Blik Mac/GLAMainNavigationBarController.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="GLAMainNavigationBarController">
@@ -10,8 +11,6 @@
                 <outlet property="addProjectButtonTopConstraint" destination="M09-u9-UXM" id="bsh-Ya-72t"/>
                 <outlet property="allButton" destination="qAd-jv-zj2" id="z1C-Vc-7xC"/>
                 <outlet property="allButtonTopConstraint" destination="YS1-If-gMJ" id="NXf-82-B8c"/>
-                <outlet property="plannedButton" destination="46L-fD-wEe" id="Me1-Uf-jzr"/>
-                <outlet property="plannedButtonTopConstraint" destination="Lso-2X-pgH" id="6Bp-fV-nJg"/>
                 <outlet property="templateButton" destination="WcU-G7-cKy" id="uvW-oO-VTV"/>
                 <outlet property="todayButton" destination="xNl-pT-6vZ" id="KWg-zP-2aC"/>
                 <outlet property="todayButtonTopConstraint" destination="ZGD-xQ-RJh" id="xuI-RC-iPX"/>
@@ -25,7 +24,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <button identifier="now" placeholderIntrinsicWidth="82" placeholderIntrinsicHeight="43" translatesAutoresizingMaskIntoConstraints="NO" id="xNl-pT-6vZ" customClass="GLANavigationButton">
-                    <rect key="frame" x="209" y="0.0" width="82" height="43"/>
+                    <rect key="frame" x="250" y="0.0" width="82" height="43"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="43" id="MmO-EA-ZHz"/>
@@ -44,7 +43,7 @@
                     </connections>
                 </button>
                 <button identifier="allProjects" placeholderIntrinsicWidth="82" placeholderIntrinsicHeight="43" translatesAutoresizingMaskIntoConstraints="NO" id="qAd-jv-zj2" customClass="GLANavigationButton">
-                    <rect key="frame" x="127" y="0.0" width="82" height="43"/>
+                    <rect key="frame" x="168" y="0.0" width="82" height="43"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="43" id="ZQU-Ui-dJc"/>
@@ -60,25 +59,6 @@
                     </userDefinedRuntimeAttributes>
                     <connections>
                         <action selector="goToAll:" target="-2" id="5Wn-2y-L3z"/>
-                    </connections>
-                </button>
-                <button identifier="plannedProjects" placeholderIntrinsicWidth="82" placeholderIntrinsicHeight="43" translatesAutoresizingMaskIntoConstraints="NO" id="46L-fD-wEe" customClass="GLANavigationButton">
-                    <rect key="frame" x="291" y="0.0" width="82" height="43"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="43" id="1fV-H2-H86"/>
-                    </constraints>
-                    <buttonCell key="cell" type="square" title="Planned" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="ZVQ-zV-GHz" customClass="GLANavigationButtonCell">
-                        <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
-                        <font key="font" size="13" name="AvenirNext-Medium"/>
-                    </buttonCell>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="cell.verticalOffsetDown">
-                            <integer key="value" value="-2"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                    <connections>
-                        <action selector="goToPlanned:" target="-2" id="t3C-ZE-lUN"/>
                     </connections>
                 </button>
                 <button identifier="addNewProject" placeholderIntrinsicWidth="43" placeholderIntrinsicHeight="43" translatesAutoresizingMaskIntoConstraints="NO" id="hxP-cr-AEv" customClass="GLAButton">
@@ -120,14 +100,12 @@
                 </button>
             </subviews>
             <constraints>
-                <constraint firstAttribute="centerX" secondItem="xNl-pT-6vZ" secondAttribute="centerX" id="6qb-cg-Qhy"/>
+                <constraint firstAttribute="centerX" secondItem="xNl-pT-6vZ" secondAttribute="leading" id="6qb-cg-Qhy"/>
                 <constraint firstAttribute="trailing" secondItem="hxP-cr-AEv" secondAttribute="trailing" id="9kS-d1-SeF"/>
-                <constraint firstItem="46L-fD-wEe" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="Lso-2X-pgH"/>
                 <constraint firstItem="hxP-cr-AEv" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="M09-u9-UXM"/>
                 <constraint firstItem="qAd-jv-zj2" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="YS1-If-gMJ"/>
                 <constraint firstItem="xNl-pT-6vZ" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="ZGD-xQ-RJh"/>
                 <constraint firstItem="WcU-G7-cKy" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="gpz-tb-53A"/>
-                <constraint firstItem="46L-fD-wEe" firstAttribute="leading" secondItem="xNl-pT-6vZ" secondAttribute="trailing" id="ish-st-fxa"/>
                 <constraint firstItem="xNl-pT-6vZ" firstAttribute="leading" secondItem="qAd-jv-zj2" secondAttribute="trailing" id="nPk-jH-dn7"/>
                 <constraint firstItem="WcU-G7-cKy" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="rCa-hS-nCn"/>
             </constraints>
